[project]
name = "cu-pro-benchmark-v0-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-identity>=1.23.0",
    "azure-storage-blob>=12.25.1",
    "fastapi>=0.115.12",
    "jinja2>=3.1.6",
    "uvicorn>=0.34.3",
]
